# sluice

./: CHANGELOG.md  Cargo.toml  README.md
.github/: main.workflow
.github/workflows/: build.yml  release-plz.yml
benches/: chunked_pipe.rs  pipe.rs  pipes.rs
src/: arrays.rs  buffer.rs  io.rs  lib.rs
src/buffers/: atomic.rs  mod.rs  unbounded.rs
src/internal/: arrays.rs  mod.rs  sync.rs
src/pipe/: chunked.rs  chunked_crossbeam.rs  mod.rs
tests/: pipe.rs
