[package]
name = "sluice"
version = "0.4.1"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
edition = "2018"
description = "Efficient ring buffer for byte buffers, FIFO queues, and SPSC channels"
documentation = "https://docs.rs/sluice"
repository = "https://github.com/sagebind/sluice"
readme = "README.md"
keywords = ["buffer", "pipe", "channel"]
categories = ["asynchronous", "concurrency", "data-structures"]
license = "MIT"

[features]
nightly = []

[dependencies]
futures-channel-preview = "0.3.0-alpha.17"
futures-core-preview = "0.3.0-alpha.17"
futures-io-preview = "0.3.0-alpha.17"

[dev-dependencies]
criterion = "0.3"
futures-preview = "0.3.0-alpha.17"

[[bench]]
name = "pipe"
harness = false
