[package]
name = "sluice"
version = "0.5.1"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
edition = "2018"
description = "Efficient ring buffer for byte buffers, FIFO queues, and SPSC channels"
documentation = "https://docs.rs/sluice"
repository = "https://github.com/sagebind/sluice"
readme = "README.md"
keywords = ["buffer", "pipe", "channel"]
categories = ["asynchronous", "concurrency", "data-structures"]
license = "MIT"

[dependencies]
futures-channel = "0.3"
futures-core = "0.3"
futures-io = "0.3"

[dependencies.futures-util]
version = "0.3"
default-features = false

[dev-dependencies]
criterion = "0.3"
futures = "0.3"

[[bench]]
name = "pipe"
harness = false
